# FeChat

./: .gitignore  CMakeLists.txt  README.md
assets/: welcome.html
include/Config/: Config.h
include/Core/: FeChat.h
include/Core/Plugin/: EventManager.h  Plugin.h  PluginManager.h
src/: main.cpp
src/Config/: Config.cpp
src/Core/: FeChat.cpp  PluginManager.cpp
